--- a/HT2.Rmd
+++ b/HT2.Rmd
@@ -16,10 +16,11 @@ library(hopkins) #Para revisar si vale la pena hacer agrupamiento
 library(GGally) #Para hacer el conjunto de graficos
 library(FeatureImpCluster) #Para revisar la importancia de las variables en los grupos.
 library(pheatmap) #Para hacer mapa de calor
+library(dplyr)
 ```
 
-```{r, echo=False}
-datos<-read.csv("C:/Stefan/MineriaDatos/movies.csv")
+```{r setup, include=TRUE, cache = FALSE}
+datos<-read.csv("movies.csv")
 set.seed(123)
 datos<-datos[complete.cases(datos),]
 summary(datos)
@@ -132,19 +133,21 @@ b <- as.numeric(datos[,"budget"])
 r <- as.numeric(datos[,"revenue"])
 r1 <- as.numeric(datos[,"runtime"])
 g <- as.numeric(datos[,"genresAmount"])
-p1 <- as.numeric(datos[,"productionCoAmount"])
+p1 <- as.numeric(datos[,"productionCoAmount"])##
 p2 <- as.numeric(datos[,"productionCountriesAmount"])
 a <- as.numeric(datos[,"actorsAmount"])
 c <- as.numeric(datos[,"castWomenAmount"])
 c1 <- as.numeric(datos[,"castMenAmount"])
-g1 <- as.numeric(datos[,"genresAmount"])
 v <- as.numeric(datos[,"voteAvg"])
 v1 <- as.numeric(datos[,"voteCount"])
 
-datosc <- data.frame(p,b,r,r1,g,p1,p2,a,c,c1,g1,v,v1)
+datosc <- data.frame(p,b,r,r1,g,p1,p2,a,v,v1,c,c1)
 
 #Escalar los datos
-datosCS <- scale(datosc)
+datosCS <- scale(na.omit(datosc))
+
+
+
 ```
 
 ```{r} 
@@ -158,5 +161,72 @@ Con un valor alejado a 0.5 se puede concluir que los datos no son aleatorios, po
 knitr::opts_chunk$set(fig.width=12, fig.height=8) 
 fviz_dist(datos_dist, show_labels = F)
 ```
+
+
+```{r metodo de codo}
+wss=0
+for (i in 1:10) 
+  wss[i] <- sum(kmeans(datosCS, centers=i)$withinss)
+
+plot(1:10, wss, type="b", xlab="Number of Clusters",  ylab="Within groups sum of squares")
+```
+
+
+## problema 4
+
+K-means es un algoritmo de clasificación no supervisada (clusterización) que agrupa objetos en k grupos basándose en sus características. El agrupamiento se realiza minimizando la suma de distancias entre cada objeto y el centroide de su grupo o cluster. Se suele usar la distancia cuadrática.
+ 
+```{r}
+km<-kmeans(datosCS,5,iter.max =1000)
+#datos$grupo<-km$cluster
+plotcluster(datosCS,km$cluster) 
+#plotcluster(datosCS[,1:12],km$cluster)
+```
+
+Como se observa en la imagen, el primer paso es escoger el numero de grupos K, en este caso fue 3 tal como se justificó anteriormente, posterior a ello se establecen k centroides en el espacio de datos.
+
+```{r}
+fviz_cluster(km, data = datosCS,geom = "point", ellipse.type = "norm")
+```
+
+
+Luego se asignan los centroides y se reubican.
+```{r}
+silkm<-silhouette(km$cluster,dist(datosCS))
+mean(silkm[,3]) 
+Kmean<-mean(silkm[,3]) 
+```
+Se obtiene que la silueta de K-means es de `r mean(silkm[,3])` esto indica que tenemos un buen resultado, ya que es muy cercano a 1, siendo un resultado deseable. </br>
+Y el gráfico de la silueta de K-means sería el siguiente:
+```{r}
+plot(silkm, cex.names=.4, col=1:3, border=NA)
+```
+
+#### Cluster jerarquico
+El algortimo de clúster jerárquico agrupa los datos basándose en la distancia entre cada uno y buscando que los datos que están dentro de un clúster sean los más similares entre sí.
+
+```{r}
+matriz_dist<- dist(datosCS)
+hc<-hclust(datos_dist, method = "ward.D2") #Genera el clustering jerarquico de los datos
+plot(hc, cex=0.5, axes=FALSE) #Genera el dendograma
+cutree(hc, h = 5)
+rect.hclust(hc,k=5)
+groups<-cutree(hc,k=5) #corta el dendograma, determinando el grupo de cada fila
+```
+
+
+```{r}
+silhc<-silhouette(groups,datos_dist)
+mean(silhc[,3]) 
+Jerarquico<-mean(silhc[,3]) 
+```
+
+Como se observa la silueta del algoritmo cluster jerárquico fue de `r mean(silhc[,3])`, indicando que su valor fue muy cercano a 1, siendo un resultado deseable.</br>
+
+Gráficamente la silueta de este algoritmo sería de la siguiente manera:
+```{r}
+plot(silhc, cex.names=.4, col=1:3, border = NA)
+```
+
 
 
