--- a/HT2.Rmd
+++ b/HT2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "HT2"
-author: "Stefan Quintana"
+author: "Stefan Quintana, Sofía Escobar, Wilfredo Gallegos"
 date: "2/16/2023"
 output: html_document
 ---
@@ -17,7 +17,10 @@ library(GGally) #Para hacer el conjunto de graficos
 library(FeatureImpCluster) #Para revisar la importancia de las variables en los grupos.
 library(pheatmap) #Para hacer mapa de calor
 library(dplyr)
+library(ggplot2)
 ```
+
+## PROBLEMA 1
 
 ```{r setup, include=TRUE, cache = FALSE}
 datos<-read.csv("movies.csv")
@@ -150,6 +153,9 @@ datosCS <- scale(na.omit(datosc))
 
 ```
 
+
+## PROBLEMA 2
+
 ```{r} 
 hopkins(datosCS)
 #Matriz de distancia
@@ -158,9 +164,11 @@ datos_dist<- dist(datosCS)
 
 Con un valor alejado a 0.5 se puede concluir que los datos no son aleatorios, por lo tanto, es adecuado el proceso de agrupamiento
 ```{r}
-knitr::opts_chunk$set(fig.width=12, fig.height=8) 
-fviz_dist(datos_dist, show_labels = F)
+#knitr::opts_chunk$set(fig.width=12, fig.height=8) 
+#fviz_dist(datos_dist, show_labels = F)
 ```
+
+## PROBLEMA 3
 
 
 ```{r metodo de codo}
@@ -172,7 +180,7 @@ plot(1:10, wss, type="b", xlab="Number of Clusters",  ylab="Within groups sum of
 ```
 
 
-## problema 4
+## PROBLEMA 4
 
 K-means es un algoritmo de clasificación no supervisada (clusterización) que agrupa objetos en k grupos basándose en sus características. El agrupamiento se realiza minimizando la suma de distancias entre cada objeto y el centroide de su grupo o cluster. Se suele usar la distancia cuadrática.
  
@@ -197,10 +205,7 @@ mean(silkm[,3])
 Kmean<-mean(silkm[,3]) 
 ```
 Se obtiene que la silueta de K-means es de `r mean(silkm[,3])` esto indica que tenemos un buen resultado, ya que es muy cercano a 1, siendo un resultado deseable. </br>
-Y el gráfico de la silueta de K-means sería el siguiente:
-```{r}
-plot(silkm, cex.names=.4, col=1:3, border=NA)
-```
+
 
 #### Cluster jerarquico
 El algortimo de clúster jerárquico agrupa los datos basándose en la distancia entre cada uno y buscando que los datos que están dentro de un clúster sean los más similares entre sí.
@@ -223,10 +228,34 @@ Jerarquico<-mean(silhc[,3])
 
 Como se observa la silueta del algoritmo cluster jerárquico fue de `r mean(silhc[,3])`, indicando que su valor fue muy cercano a 1, siendo un resultado deseable.</br>
 
-Gráficamente la silueta de este algoritmo sería de la siguiente manera:
+
+## PROBLEMA 5
+El gráfico de la silueta de K-means sería el siguiente:
+```{r}
+plot(silkm, cex.names=.4, col=1:3, border=NA)
+```
+
+
+Y el gráfico de la silueta de Jerargico sería: 
 ```{r}
 plot(silhc, cex.names=.4, col=1:3, border = NA)
 ```
 
+Al recopilar el promedio de los datos obtenemos:
+```{r}
+df <- data.frame(Algoritmo=c("K-mean", "Jerarquico"),
+                Silueta=c(Kmean, Jerarquico))
+df
+```
+
+Se puede observar que el cluster jerárquico fue el que obtuvo el mejor resultado en la prueba de silueta pero que el algorito Kmeans esta por debajo por 0.03 puntos lo que indica que sus resultados son muy parecidos. 
+
+## PROBLEMA 6
 
 
+```{r}
+library(GGally)
+ggpairs(datosc,columns=c(4,5,6,9))
+```
+Estos son algunos de las variables analizadas para ver su correlación, su frencuencia y su normalidad. En las variables de la gráfica se puede observar que los datos tienen una tendencia a agruparse al lado izquierdo, es decir, que hay una mayor de variables con un valor cercano a 0. Además, se puede observar en los gráficos de caja y bigotes la tendencia central de las
+variables se encuentra en el lado izquierdo de la gráfica. De igual forma la correlacion entre algunas de las varibales es baja lo que indica que podriamos ignorarlas al momento de volver a hacer otro analisis. De igual forma en varios datos analisados en el problema 1 observamos que no todas las variables siguen una distribucion normal lo que indica que hay varios datos atipicos, estos igual podrian ser utilizados para poder eliminar varibles y que no afecten los datos. 
